--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-dsd-rollup-template",
+  "name": "@jonniebigodes/learnstorybook-design-system-7-0",
   "version": "0.1.0",
   "description": "Everything you need to build a starter design system",
   "main": "dist/cjs/index.js",
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
-    "watch":"rollup --watch -c --bundleConfigAsCjs",
+    "watch": "rollup --watch -c --bundleConfigAsCjs",
     "clean": "rimraf ./dist",
     "prebuild": "yarn clean",
     "release": "yarn build && auto shipit",
@@ -81,5 +81,7 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "repository": "https://github.com/jonniebigodes/learnstorybook-design-system-7-0.git",
+  "private": false
 }
