--- a/package.json
+++ b/package.json
@@ -24,17 +24,13 @@
   },
   "author": "jonniebigodes",
   "license": "MIT",
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "polished": "^4.2.2",
-    "prop-types": "^15.8.1"
-  },
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -65,11 +61,16 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook": "^7.0.20",
     "vite": "^4.1.4",
-    "zx": "^1.14.1"
+    "zx": "^1.14.1",
+    "polished": "^4.2.2",
+    "prop-types": "^15.8.1"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "polished": "^4.2.2"
   },
   "peerDependenciesMeta": {
     "react": {
