--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@jonniebigodes/learnstorybook-design-system-7-0",
   "version": "0.1.8",
   "description": "Everything you need to build a starter design system",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "files": [
     "dist/**/*",
     "README.md",
@@ -52,7 +52,9 @@
     "chromatic": "^6.18.2",
     "dedent": "^0.7.0",
     "npm-run-all": "^4.1.5",
+    "polished": "^4.2.2",
     "prettier": "^2.8.8",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
@@ -61,16 +63,14 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "storybook": "^7.0.20",
     "vite": "^4.1.4",
-    "zx": "^1.14.1",
-    "polished": "^4.2.2",
-    "prop-types": "^15.8.1"
+    "zx": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "polished": "^4.2.2"
+    "polished": "^4.2.2",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
