--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "jonniebigodes",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
