--- a/.babelrc.json
+++ b/.babelrc.json
@@ -9,7 +9,10 @@
         }
       }
     ],
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      { "runtime": "automatic", "importSource": "@emotion/react" }
+    ]
   ],
-  "plugins": ["@emotion"]
+  "plugins": ["@emotion/babel-plugin"]
 }
